--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@ layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS EITHER.  (THANK YOU.)
 carpentry: "swc"      # what kind of Carpentry (must be either "dc" or "swc")
 venue: "West Virginia University (WVU)" # brief name of host site without address (e.g., "Euphoric State University")
-address: "TBD"        # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
+address: "WVU Downtown Library Room 104 (Lower Level)"        # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
 country: "us"         # lowercase two-letter ISO country code such as "fr" (see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "en"        # lowercase two-letter ISO language code such as "fr" (see https://en.wikipedia.org/wiki/ISO_639-1)
-latlng: "TBD"         # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
+latlng: "39.633156,-79.954276"         # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
 humandate: "May 18-19, 2017" # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
 humantime: "TBD"      # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
 startdate: 2017-05-18 # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
