--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ country: "us"         # lowercase two-letter ISO country code such as "fr" (see 
 language: "en"        # lowercase two-letter ISO language code such as "fr" (see https://en.wikipedia.org/wiki/ISO_639-1)
 latlng: "39.633156,-79.954276"         # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
 humandate: "May 18-19, 2017" # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
-humantime: "TBD"      # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
+humantime: "9:00 AM"      # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
 startdate: 2017-05-18 # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
 enddate: 2017-05-19   # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
 instructor: ["Alexey Shiklomanov", "K. Arthur Endsley"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["TBD"]       # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+helper: ["Aniello Infante", "Zoltan Makai"]       # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: ["ashiklom@bu.edu", "endsley@umich.edu"] # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
 etherpad: "http://pad.software-carpentry.org/2017-05-18-WVU" # optional: URL for the workshop Etherpad if there is one
 eventbrite:           # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
