Add information to website page

--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   </em>
 </p>
 
+<p id="symopsis">
+  <strong>Synopsis:</strong>
+  This course is structured around using a combination of Python, the Unix shell, and SQL to analyze climate data, as well as using Git for version control of associated data and scripts.
+  On Thursday morning, you will use Python scripting to construct a simple program to analyze pre-downloaded climate data from several different sites.
+  On Thursday afternoon, you will use the Unix shell to automatically download and organize more climate data that you will be able to feed into your Python analysis program.
+  On Friday morning, you will learn how to use git to version control, back up, and collaborate on the scripts you developed on Thursday.
+  Finally, on Friday afternoon, you will return to Python to learn more advanced programming techniques and concepts, including retrieving data in an SQL database.
+  <br>
+  Although each lesson focuses on a distinct tool, we have tried to customize the lessons into a single cohesive unit, with each lesson building on material from the one before it.
+  Therefore, we strongly encourage attendance of all lessons.
+</p>
+
 <!--
   AUDIENCE
 
@@ -82,7 +94,8 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 -->
 <p id="who">
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
+  The course is aimed at individuals with little to no programming experience and who are interested in using programming to perform tasks related to data analysis.
+  Graduate and undergraduate students, researchers, faculty, and other staff are welcome to attend.
   <strong>You don't need to have any previous knowledge of the tools that will
     be presented at the workshop.</strong>
 </p>
@@ -377,6 +390,11 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   We maintain a list of common issues that occur during installation as a reference for instructors
   that may be useful on the
   <a href = "{{site.swc_github}}/workshop-template/wiki/Configuration-Problems-and-Solutions">Configuration Problems and Solutions wiki page</a>.
+</p>
+<p>
+  <em>Please make sure you have all the software ready to go by the time the workshop begins at 9AM each day</em>.
+  This will help us keep the workshop running smoothly and allow us to cover all of our planned material.
+  If you have any questions or need assistance with the setup process, we recommend that you arrive 15 to 30 minutes before the workshop, at which time one of the instructors or helpers will be available for personalized setup help.
 </p>
 
 <div id="shell"> <!-- Start of 'shell' section. -->
